--- a/lib/templates/Vagrantfile.erb
+++ b/lib/templates/Vagrantfile.erb
@@ -140,9 +140,9 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
 <%     else -%>
 <%      # Static oVirt networking -%>
 <%       if (@options.has_key? :ovirtuser) && (@options.has_key? :ovirtpass) -%>
-<%         interface = 'eth0' -%>
-<%         if @ovirt_template.include? 'stretch' -%>
-<%          interface = 'ens3' -%>
+<%         interface = 'ens3' -%>
+<%         if @ovirt_template and @ovirt_template ~= /kali|debian_desktop_kde/ -%>
+<%          interface = 'eth0' -%>
 <%         end -%>
            # use some shell scripting to identify the name of the network interface (eth0/ens3/...), and set the IP address statically
            <%= system.name %>.vm.provision 'shell', inline: "echo -e \"auto lo\niface lo inet loopback\n\nauto <%= interface %>\niface <%= interface %> inet static\n\taddress <%= resolve_network(selected_module)%>\" > /etc/network/interfaces"
