--- a/modules/generators/structured_content/hackerbot_config/ids_rules/templates/intro.md.erb
+++ b/modules/generators/structured_content/hackerbot_config/ids_rules/templates/intro.md.erb
@@ -12,7 +12,7 @@
 
 All of these VMs need to be running to complete the lab.
 
-**Ensure the ids_server VM is allowed promiscuous mode.** If you are completing this lab on Leeds Beckett oVirt infrastructure, this should be sorted. Otherwise, if you have used SecGen to spin up VMs, you need to ensure your VMs have permission to monitor networks using promiscuous mode. On the Leeds Beckett oVirt infrastructure we have snoop networks, which mirror all the traffic between systems. On Virtualbox, you would need to go to Advanced network settings for the host-only network on the ids_server and enable promiscious mode. 
+**Ensure the ids_server VM is allowed promiscuous mode.** If you are completing this lab on Leeds Beckett oVirt infrastructure, this should be sorted. Otherwise, if you have used SecGen to spin up VMs, you need to ensure your VMs have permission to monitor networks using promiscuous mode. On the Leeds Beckett oVirt infrastructure we have snoop networks, which mirror all the traffic between systems. On Virtualbox, you would need to go to Advanced network settings for the host-only network on the ids_server and enable promiscious mode.
 
 ### Your login details for the "desktop" and "ids_server" VMs
 User: <%= $main_user %>
@@ -45,21 +45,15 @@ sudo vi /etc/snort/snort.conf
 
 > ":wq" to write changes and quit)
 
-==Add the following lines:==
+==Add the following line:==
 `output alert_fast`
-
-`include $RULE_PATH/my.rules`
 
 ==Create a new rules file:==
 
-```bash
-sudo touch /etc/snort/rules/my.rules
-```
-
-Let us edit the rules file without sudo:
+Let us edit the local rules file without sudo:
 
 ```bash
-sudo chown <%= $main_user %> /etc/snort/rules/my.rules
+sudo chown <%= $main_user %> /etc/snort/rules/local.rules
 ```
 
 ==Change Snort's interface== to the interface with IP address <%= $ids_server_ip %> (likely eth1), and set the local network to your IP address range (or "any"):
