--- a/modules/generators/structured_content/hackerbot_config/ids_rules/templates/write_snort_rules.md.erb
+++ b/modules/generators/structured_content/hackerbot_config/ids_rules/templates/write_snort_rules.md.erb
@@ -46,7 +46,7 @@ Note that in Wireshark you can view individual packets, including IP and TCP hea
 ==Start Wireshark:==
 
 ```bash
-kdesudo wireshark &
+kdesudo wireshark
 ```
 > For this exercise you can ignore the warnings about running Wireshark as root, or read online to learn to use setcap to grant Wireshark more specific privileges.
 
