--- a/modules/generators/structured_content/hackerbot_config/ids_rules/templates/write_snort_rules.md.erb
+++ b/modules/generators/structured_content/hackerbot_config/ids_rules/templates/write_snort_rules.md.erb
@@ -101,7 +101,7 @@ To set the type of alert:
 
 > `classtype:misc-attack`
 >
-> (where *misc-attack* is defined in `/etc/snort/classification.conf`)
+> (where *misc-attack* is defined in `/etc/snort/classification.config`)
 
 To give a unique identifier and revision version number:
 
