--- a/modules/generators/structured_content/hackerbot_config/live_analysis_v2/templates/intro.md.erb
+++ b/modules/generators/structured_content/hackerbot_config/live_analysis_v2/templates/intro.md.erb
@@ -7,26 +7,18 @@
 
 - hackerbot-server (leave it running, you don't log into this)
 - desktop
-- server-compromised (user: root password: toor)[^2]
+- server-compromised
 
 All of these VMs need to be running to complete the lab.
 
-==Create a new VM from the Redhat7.2\_Template2 template and give it a name that begins with your "c" number==. **DO NOT START the new VM.**
-> If you are working on campus in the IMS labs using the oVirt online labs, [*click here for instructions on how to login on campus in the IMS labs and create VMs from templates*](https://docs.google.com/document/d/1SZQmZ8tEmwqzlya5zMCuwTh_C1EqHfMRif09CyilYAE/edit?usp=sharing).
-
-> If you are working remotely using the oVirt online labs, [*click here for instructions on how to login via VPN and create VMs from templates*](https://docs.google.com/document/d/1zhANC_pz7fNwc_cALxGwPEn3_vls2YjWJUAkUV0BwlI/edit?usp=sharing).
-
-
-The Compromised Red Hat 7.2 system is based on a server that has been compromised (courtesy of the Honeynet Project[^1]).
-
 Once you have your compromised server VM, ==add the FIRE IR CD disk==.
 
-In oVirt, right click on the VM and choose **Change CD**.
+In hacktivity, click on the VM's settings and choose **Change CD/DVD**.
 
 ==Select the "fire-0.3.5b.iso"== file from the dropdown box.
 
 
-==Start the VM and log in as the user specified above.==
+==Log in as the user specified.==
 
 ### Your login details for the VMs
 
@@ -53,7 +45,7 @@ This exercise involves interacting with Hackerbot, a chatbot who will task you t
 
 Work through the below exercises, completing the Hackerbot challenges as noted.
 
-## Note IP addresses 
+## Note IP addresses
 
 **On the Red Hat 7.2 VM:**
 ==Login to the Red Hat 7.2 VM with root and toor.==
