--- a/modules/generators/structured_content/hackerbot_config/dead_analysis_v2/templates/intro.md.erb
+++ b/modules/generators/structured_content/hackerbot_config/dead_analysis_v2/templates/intro.md.erb
@@ -123,7 +123,8 @@ The output shows that over 16000 files have been ignored because they were found
 
 Copy the results file location as reported by Autopsy, and ==open the report in a new tab within Firefox:==
 
-> /var/lib/autopsy/RedHatCompromised/host1/output/sorter-vol1/index.html
+> <a href="file:///var/lib/autopsy/RedHatCompromised/host1/output/sorter-vol1/">/var/lib/autopsy/RedHatCompromised/host1/output/sorter-vol1/</a>
+> (Without the index.html)
 
 ==Click "compress"==, to view the compressed files. You are greeted with a list of two compressed file archives, "/etc/opt/psyBNC2.3.1.tar.gz", and "/root/sslstop.tar.gz".
 
