--- a/modules/generators/structured_content/hackerbot_config/dead_analysis_v2/templates/intro.md.erb
+++ b/modules/generators/structured_content/hackerbot_config/dead_analysis_v2/templates/intro.md.erb
@@ -8,8 +8,11 @@
 
 - hackerbot-server (leave it running, you don't log into this)
 - kali (user: root, password: toor)
+- desktop (user: <%= $main_user %>, password: tiaspbiqe2r)
 
 All of these VMs need to be running to complete the lab.
+
+Analysis is done on the Kali VM, answers stored on the Desktop VM.
 
 ## Introduction to dead (offline) analysis
 
@@ -113,7 +116,7 @@ Now that you have started and configured Autopsy with a new case and hash databa
 
 Confirm that "Ignore files that are found in the Exclude Hash Database" is selected.
 
-==Click "Ok"==, this analysis takes some time.
+==Click "Ok"==, *this analysis takes some time*.
 
 Once complete, ==view the "Results Summary".==
 
