--- a/modules/generators/structured_content/hackerbot_config/live_analysis_v2/templates/intro.md.erb
+++ b/modules/generators/structured_content/hackerbot_config/live_analysis_v2/templates/intro.md.erb
@@ -1,4 +1,4 @@
-# Analysis of a Compromised System - Part 1: Online Analysis and Data Collection
+# Analysis of a Compromised System - Online Analysis and Data Collection
 
 ## Getting started
 ### VMs in this lab
