--- a/modules/generators/structured_content/hackerbot_config/dead_analysis_v2/templates/intro.md.erb
+++ b/modules/generators/structured_content/hackerbot_config/dead_analysis_v2/templates/intro.md.erb
@@ -116,7 +116,7 @@ Now that you have started and configured Autopsy with a new case and hash databa
 
 Confirm that "Ignore files that are found in the Exclude Hash Database" is selected.
 
-==Click "Ok"==, **this analysis takes quite some time**.
+==Click "Ok"==, **this analysis takes quite some time, wait for the output to update with results**.
 
 Once complete, ==view the "Results Summary".==
 
