--- a/modules/generators/structured_content/hackerbot_config/dead_analysis_v2/templates/timeline.md.erb
+++ b/modules/generators/structured_content/hackerbot_config/dead_analysis_v2/templates/timeline.md.erb
@@ -20,7 +20,7 @@ Wait while a timeline is generated.
 
 ==Click "Ok".==
 
-Once analysis is complete, the timeline is presented. Note that the timeline starts with files accessed on Jan 01 1970.
+Once analysis is complete, the timeline is presented (there is also a .txt version if the HTML version has troubles loading). Note that the timeline starts with files accessed on Jan 01 1970.
 
 ==Click "Summary".==
 
@@ -59,4 +59,3 @@ Further down we see wget accessed and used to download the /etc/opt/psyBNC2.3.1.
 This file was then extracted, and the program compiled. This involved accessing many header (.h) files. Finally, the "/etc/opt/psybnc/psybnc.conf" file is modified, presumably by the attacker, in order to configure the behaviour of the program.
 
 ---
-
