--- a/modules/generators/structured_content/hackerbot_config/live_analysis_v2/templates/lab.xml.erb
+++ b/modules/generators/structured_content/hackerbot_config/live_analysis_v2/templates/lab.xml.erb
@@ -32,8 +32,7 @@
   $example_file = "/home/#{$second_user}/#{$files.sample}"
   $example_dir = "/home/#{$second_user}/personal_secrets/"
 
-  $web_server_ip = self.web_server_ip.first
-  $ids_server_ip = self.ids_server_ip.first
+  $compromised_server_ip = self.compromised_server_ip.first
   $hackerbot_server_ip = self.hackerbot_server_ip.first
   $root_password = self.root_password
   $flags = self.flags
