--- a/modules/generators/structured_content/hackerbot_config/live_analysis_v2/templates/live_evidence_collection.md.erb
+++ b/modules/generators/structured_content/hackerbot_config/live_analysis_v2/templates/live_evidence_collection.md.erb
@@ -30,7 +30,7 @@ Next you will configure the compromised_server VM to have access to the FIRE (Fo
 
 Add the FIRE IR CD disk:
 
-In hacktivity, click on the VM's settings (gear) icon and choose ==Change CD/DVD==.
+In Hacktivity, click on the VM's settings (gear) icon and choose ==Change CD/DVD==.
 
 ==Select the "fire-0.3.5b.iso"== file from the dropdown box. ==Click "Attach disk"==
 
