--- a/modules/generators/structured_content/hackerbot_config/live_analysis_v2/templates/live_evidence_collection.md.erb
+++ b/modules/generators/structured_content/hackerbot_config/live_analysis_v2/templates/live_evidence_collection.md.erb
@@ -337,7 +337,7 @@ Power down the compromised system, so that we can continue analysis offline:
 ```
 > If you do not know what the sync command does, on your Desktop VM, run "info coreutils 'sync invocation'" for more information.
 >
-> Tell Hacktivity to force a Power Off.
+> At this point you could tell Hacktivity to force a Power Off. However, you might want to wait until you finish the Hackerbot challenges.
 
 Why might we want to force a power off (effectively "pulling the plug"), rather than going through the normal shutdown process (by running "halt" or "shutdown")?
 
